Sun Dec 31 19:14:47 2000  George Lebl <jirka@5z.com>

	* panel-widget.[ch], applet.c, extern.c, panel.c:  Allow
	  the drag_start to be started off at a specific drag offset,
	  and pass the current drag offset when going over to another
	  panel.  Also for move from the menu, make the offset the center of
	  the applet.

Sun Dec 31 18:43:24 2000  George Lebl <jirka@5z.com>

	* panel-widget.c:  Use the new movememnt style for both switch and
	  push move.  Instead of waiting until the boundary is crossed, the
	  applet is sortof being held onto on the place you clicked on it.

Sun Dec 31 17:41:21 2000  George Lebl <jirka@5z.com>

	* panel-widget.[ch], extern.c:  minor cleanup, and use initial
	  cursor position for free movement for nicer moving.

Sat Dec 30 23:00:47 2000  George Lebl <jirka@5z.com>

	* panel.c, main.c, panel-util.[ch], menu.c, session.c, drawer.c:
	  Various cleanups, use of string_empty and sure_string, also relayer
	  dialogs after change of default layer and don't put dialogs
	  in dock when panels are in normal layer.

Sat Dec 30 05:27:19 2000  George Lebl <jirka@5z.com>

	* xstuff.[ch], global-keys.c, swallow.c:  Use gwmh for everything
	  here, this greatly reduces the X traffic as the way things were
	  done before was actually quite wasteful.

	* menu-rh.c:  remove ampersand from the commands.

Fri Dec 29 17:45:12 2000  George Lebl <jirka@5z.com>

	* menu-fentry.h, menu.[ch], foobar-widget.c:  Add a menu for adding
	  launchers from a menu.  This is more discoverable then right click
	  or DnD, but somewhat of a pain to use.  For the lovers of menu.c,
	  this adds some more convoluted hacks.

Thu Dec 21 14:54:46 2000  George Lebl <jirka@5z.com>

	* extern.c: put in the size allocate hack again, since YES it IS
	  needed, we however need to set up the requisition on the ebox in
	  a different way to avoid a hang.

Tue Dec 19 21:34:41 2000  George Lebl <jirka@5z.com>

	* panel-util.[ch], gnome-panel-properties.c, menu.c, drawer.c,